# typhped

./: .gitignore  .php_cs.dist  Makefile  README.md  behat.yml.dist  build.xml  circle.yml  composer.json  humbug.json  infection.json.dist  phpcs.xml  phpcs.xml.dist  phpmd.xml  phpstan.neon  phpunit.xml.dist
.circleci/: config.yml
docs/: README.md
etc/: phpcs.xml.dist  phpstan.neon
rust/php-parser/: Cargo.toml  Makefile
rust/php-parser/app/: Cargo.toml
rust/php-parser/lib/: Cargo.toml  build.rs
